2009-01-29  Scott James Remnant  <scott@netsplit.com>

	* init/parse_job.c (parse_exec, parse_script, stanza_instance)
	(stanza_description, stanza_author, stanza_version)
	(stanza_start, stanza_stop, stanza_chroot, stanza_chdir):
	Unreference members when replacing them instead of freeing; not
	strictly necessary but the style is the thing.

	* init/job_process.c (job_process_terminated): Unreference the
	kill timer instead of freeing

	* init/job_class.c (job_class_get_instance): Use nih_local for
	instance environment and name
	(job_class_start, job_class_stop, job_class_restart):
	Unreference job environment instead of freeing

	* init/job.c (job_change_state, job_start, job_stop, job_restart):
	Unreference job environment instead of freeing
	(job_name): Discard job name in case a reference was taken.

	* init/event.c (event_pending_handle_jobs): Unreference the job
	environment instead of freeing

	* init/environ.c (environ_add): should unreference the old environment
	string in case anyone took a ref elsewhere
	(environ_set): use nih_local for str
	(environ_expand_until): Should set *str to NULL if we free it,
	just in case.

	* init/conf.c (conf_source_reload): File should be unreferenced,
	not freed.
	(conf_source_reload_file): Use nih_local for dpath
	(conf_delete_handler): Watch and file should be unreferenced,
	not freed.
	(conf_reload_path): File should be unreferenced, not freed;
	use nih_local for file buffer

	* init/blocked.c (blocked_new),
	* init/conf.c (conf_source_new, conf_file_new),
	* init/event.c (event_new),
	* init/event_operator.c (event_operator_new),
	* init/job.c (job_new),
	* init/job_class.c (job_class_new): No need to cast function
	argument to nih_alloc_set_destructor()

	* init/tests/test_job_process.c (test_handler): We can't just
	assume that our child is sitting at the signal otherwise we might
	end up sending the CONT signal before it's even stopped.  Use
	waitid() to wait for the child to stop first.
